# Records

./: .$Models.drawio.bkp  .$path .drawio.bkp  .gitignore  Models.drawio  README.md  docker-compose.yml  path .drawio  pyproject.toml
backend/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  queries.sql  requirements.txt  test.py
backend/core/: constants.py  utils.py
backend/core/db/: base.py  config.py  database.py  db_helper.py
backend/db/: config.py  database.py  orm.py
backend/migrations/: env.py
backend/migrations/versions/: 2023_12_12_1652-15e586f25e26_create_tables.py  2023_12_22_1024-2aa867b692a1_add_model_service.py  2023_12_22_1055-e2bc341affe2_edit_services_null_true.py  2023_12_27_1618-84ce847b6c16_add_m2m_service_specialist.py  2023_12_27_1958-461eb8f1798d_change_type_t_id.py  2023_12_28_0932-c6742c7efd4f_add_column_price_to_service_table.py  2023_12_28_1001-a8f2f5f74699_add_m2m_specialist_specialization.py  2023_12_30_2322-0b110f6c7a0f_add_attr.py  (+9 more)
backend/models/: models.py  utils.py
backend/records/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  views.py
backend/services/: crud.py  dependencies.py  models.py  schemas.py  service_specialist_association.py  views.py
backend/specialists/: crud.py  dependecies.py  models.py  schemas.py  validators.py  views.py
backend/specializations/: crud.py  dependencies.py  models.py  schemas.py  specialist_specialization_association.py  utils.py  views.py
backend/users/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  views.py
(+3 files in other folders)
