[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["number92 <rav.92@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
fastapi = {extras = ["all"], version = "^0.104.1"}
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.23"
pydantic = "^2.5.2"
phonenumbers = "^8.13.26"
pydantic-settings = "^2.1.0"
sqlalchemy-utils = "^0.41.1"
psycopg = "^3.1.14"
regex = "^2023.10.3"
psycopg-binary = "^3.1.16"
black = "^23.12.0"
aiogram = "^3.3.0"
uvicorn = {extras = ["standart"], version = "^0.27.0.post1"}
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''